elofgren: USABILITY: Fix usability issue #48 "Delete and Move Files buttons need repositioning" Changes: * Remove the 'Move Files' button and enable multi-file drag and drop file moving * Position the 'Delete selected files' button under the checkboxes and make it turn red on hover * Add 'Ctrl' and 'Shift' range selection to file checkboxes * Add 'X' delete links to the right of each file * Rename the 'Save' button to 'Save folder name' and don't show it when listing 'assets' folder since it can't be renamed More info: http://www.silverstripe.com/google-summer-of-code-forum/flat/1607 (merged from branches/gsoc)
git-svn-id: svn://svn.silverstripe.com/silverstripe/open/modules/cms/trunk@41927 467b73ca-7a2a-4603-9d3b-597d59a354a9

--- a/css/cms_left.css
+++ b/css/cms_left.css
@@ -99,7 +99,7 @@
 ul.tree span.a {
 	cursor: pointer;
 }
-ul.tree span.a.over {
+.filefolderhover span.a, ul.tree span.a.over {
 	background-color: #FFFFBB !important;
 	
 	/* these push the highlight out to the left of the window */
