--- a/css/cms_right.css
+++ b/css/cms_right.css
@@ -375,7 +375,7 @@ table.CMSList tbody td.current td {
 .ajaxActions input:hover {
 	background: #fff;
 }
-.ajaxActions input.delete:hover {
+input.delete:hover {
 	background: #ce0000;
 	color: #fff;
 }
@@ -793,6 +793,32 @@ div.CommentFilter {
 	font-style: italic;	
 }
 
+/**
+ * AssetAdmin
+ */
+#right form .inlineformaction {
+	margin-left: 0;
+}
+.dragfile, .dragfile img {
+	float: left;
+	cursor: move;
+}
+.NumFilesIndicator {
+	text-align: left;
+ 	padding: 1px 1px 1px 10px;
+ 	font-size: 16px;
+	font-weight: bold;
+ 	border: 1px solid #cc9;
+	color: #660;
+	background-color: #F9F9E3;
+	margin: 2px;
+}
+.DraggedHandle {
+	width: 30em !important;
+}
+.ComplexTableField tbody td.markingcheckbox {
+	cursor: default;
+}
 /**
  * SecurityAdmin
  */
